Add solver safeguards and bilingual README